--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint .",
     "server-api": "json-server db.json --port 3001",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.3.2",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.19",
